--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ phone: +420 601 531 976
 #website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 #twitter_username: facespics
