--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ linkedin_username: martin-k-881394119
 # Additional icon links
 additional_links:
   - title: another link
-    icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
+    icon: fab fa-twitter
     url: Link url (eg. https://google.com)
 
 # Google Analytics and Tag Manager
