--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ linkedin_username: martin-k-881394119
 
 # Additional icon links
 additional_links:
-  - title: another link
-    icon: fa-file-pdf
+  - title: PDF Resume
+    icon: fab fa-file-pdf
     url: https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
 
 # Google Analytics and Tag Manager
