--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Martin Mikus
 title: Senior SAP Full Stack Developer
 email: martinmikus2@protonmail.com
 phone: +420 601 531 976
-website: Download CV in PDF <a href="https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf">PDF</a>
+website: <a href="https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf">PDF</a>
 
 # Dark Mode (true/false/never)
 darkmode: true
