--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Martin Mikus
 title: Senior SAP Full Stack Developer
 email: martinmikus2@protonmail.com
 phone: +420 601 531 976
-website: images/profile.jpg
+description:  <a href="http://testing.test123.org/xx3/landing.gsp">Testing Landing Page</a>
 
 # Dark Mode (true/false/never)
 darkmode: true
