--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Martin Mikus
 title: Senior SAP Full Stack Developer
 email: martinmikus2@protonmail.com
 phone: +420 601 531 976
-website: martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
+website: https://short-link.me/downloadpdf
 
 # Dark Mode (true/false/never)
 darkmode: true
@@ -31,10 +31,10 @@ linkedin_username: martin-k-881394119
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-  - title: PDF Resume
-    icon: fab fa-file-pdf
-    url: https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
+#additional_links:
+#  - title: PDF Resume
+#    icon: fab fa-file-pdf
+#    url: https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
