--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Martin Mikus
 title: Senior SAP Full Stack Developer
 email: martinmikus2@protonmail.com
 phone: +420 601 531 976
-website: https://short-link.me/downloadpdf
+website: "[Download PDF](https://short-link.me/downloadpdf)"
 
 # Dark Mode (true/false/never)
 darkmode: true
