--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ linkedin_username: martin-k-881394119
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-#additional_links:
-#  - title: PDF Resume
-#    icon: fab fa-file-pdf
-#    url: https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
+additional_links:
+  - title: PDF Resume
+    icon: fab fa-file-pdf
+    url: https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
@@ -259,3 +259,4 @@ sass:
 
 plugins:
  - jekyll-seo-tag
+ - jekyll-fontawesome
