--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ linkedin_username: martin-k-881394119
 # Additional icon links
 additional_links:
   - title: PDF Resume
-    icon: fa file-pdf-o
+    icon: fa fa-file-pdf-o
     url: https://martinfullstackdevsap.github.io/cv/martin_mikus_cv.pdf
 
 # Google Analytics and Tag Manager
